enable payment of multiple products code

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 
   <h1>Doces da Tia Vera</h1>
 
-  <div class="product" code="F33D6D45DEDE0E37748D3F913408D18F" price="0.01">
+  <div 
+      class="product"
+      price="0.01"
+      code="
+        F33D6D45DEDE0E37748D3F913408D18F,
+        E8E576400A0AB07114D1CF94F6465758,
+        2D4E8454C9C9F418840E3FB901EFD6F3
+      ">
     <h2>Brownie</h2>
     <div>R$ 0,01/unidade</div>
     <div>
@@ -19,13 +26,20 @@
     </div>
     <div>
       <button remove>-</button>
-      <span quantity>10</span>
+      <span quantity>1</span>
       <button add>+</button>
     </div>
     <button buy>Comprar</button>
   </div>
 
-  <div class="product" code="50F3353EFAFA72B33420FFBDE4C7BF7B" price="0.02">
+  <div 
+      class="product" 
+      price="0.02"
+      code="
+        50F3353EFAFA72B33420FFBDE4C7BF7B,
+        5D9F5B7E2F2FCB4114D4FFAF5E565378,
+        232E692DD2D22ACFF44F0F911253AB9B
+      ">
     <h2>Bolo</h2>
     <div>R$ 0,02/unidade</div>
     <div>
@@ -33,7 +47,7 @@
     </div>
     <div>
       <button remove>-</button>
-      <span quantity>10</span>
+      <span quantity>1</span>
       <button add>+</button>
     </div>
     <button buy>Comprar</button>
